# MemoryGr.id

./: README.md
assets/agent-memories/agentic-memory/: pyproject.toml
assets/agent-memories/agentic-memory/agent-memory-docs/: implementation.md
assets/agent-memories/agentic-memory/agentic_memory/: agent_memory.py  config.py  embeddings.py
assets/agent-memories/agentic-memory/agentic_memory.egg-info/: PKG-INFO  SOURCES.txt
assets/agent-memories/agentic-memory/agentic_memory/backends/: arango_client.py  postgres_client.py  weaviate_client.py
assets/agent-memories/agentic-memory/agentic_memory/memory_types/: base.py  procedural.py  reflective.py
assets/agent-memories/agentic-memory/tests/: test_context_kv.py  test_episodic.py  test_procedural.py  test_reflective.py
assets/agent-memories/examples/: example_context_kv.py  (+4 more)
docs/: client-sdk.md  creating-objects.md  creation-in-memory.md  creation-storage.md  framedb-writer-service.md  installation.md  intro.md  routing-service.md  video-ingestion.md
kubernetes/installer/: install.sh  install_db.sh  uninstall.sh
services/agent-memories/: README.md
services/agent-memories/fs/: pyproject.toml
services/agent-memories/fs/agent_fs/: core.py  exceptions.py
services/config/: main.py
services/decoder-service/: stream-alerts.json
services/global-config/: Dockerfile  requirements.txt
services/object_api/: framedb.proto  reqirements.txt
services/source_db/: .env  Dockerfile  gql_router.js  index.js  log_config.json  log_config_container.json  package-lock.json  package.json  source_registry.json
(+167 files in other folders)
