[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-memory"
version = "0.1.0"
description = "Five-type agentic memory library backed by Weaviate, ArangoDB, and PostgreSQL"
requires-python = ">=3.8"
dependencies = [
    "weaviate-client>=4.0",
    "python-arango>=8.0",
    "psycopg2>=2.9",
    "openai>=1.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
