[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent_fs"
version = "0.1.0"
description = "Version-controlled, git-backed file system for agents"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fs*"]
